; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_base/extr_revs-txns.c_txn_body_change_rev_prop.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_base/extr_revs-txns.c_txn_body_change_rev_prop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }
%struct.change_rev_prop_args = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, %struct.TYPE_4__*)* @txn_body_change_rev_prop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @txn_body_change_rev_prop(i8* %0, %struct.TYPE_4__* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca %struct.change_rev_prop_args*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.change_rev_prop_args*
  store %struct.change_rev_prop_args* %7, %struct.change_rev_prop_args** %5, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.change_rev_prop_args*, %struct.change_rev_prop_args** %5, align 8
  %12 = getelementptr inbounds %struct.change_rev_prop_args, %struct.change_rev_prop_args* %11, i32 0, i32 3
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.change_rev_prop_args*, %struct.change_rev_prop_args** %5, align 8
  %15 = getelementptr inbounds %struct.change_rev_prop_args, %struct.change_rev_prop_args* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.change_rev_prop_args*, %struct.change_rev_prop_args** %5, align 8
  %18 = getelementptr inbounds %struct.change_rev_prop_args, %struct.change_rev_prop_args* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.change_rev_prop_args*, %struct.change_rev_prop_args** %5, align 8
  %21 = getelementptr inbounds %struct.change_rev_prop_args, %struct.change_rev_prop_args* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32* @svn_fs_base__set_rev_prop(i32 %10, i32 %13, i32 %16, i32 %19, i32 %22, %struct.TYPE_4__* %23, i32 %26)
  ret i32* %27
}

declare dso_local i32* @svn_fs_base__set_rev_prop(i32, i32, i32, i32, i32, %struct.TYPE_4__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
